update naming of query
