# src/main/java/com/vape/data/streaming/controller/SensorDataInputController.java
@@ -24,8 +24,8 @@ public class SensorDataInputController implements SensorApi {
     private final DtoMapper mapper;
 
     @Override
-    public ResponseEntity<SensorData> sensorPost(SensorData body, String id) {
-        if (StringUtils.isNotEmpty(body.getSensorId()) && id.equals(body.getSensorId()) ) {
+    public ResponseEntity<SensorData> sensorPost(SensorData body, String sensorId) {
+        if (StringUtils.isNotEmpty(body.getSensorId()) && sensorId.equals(body.getSensorId()) ) {
             SensorDataPointModel model = mapper.toSensorDataPointModel(body);
             producer.publishSensorData(model);
             return new ResponseEntity<>(body, HttpStatus.OK);
